--- a/back/views/admin/login.hbs
+++ b/back/views/admin/login.hbs
@@ -1,1 +1,21 @@
-<h1>Hola soy la pagina de Login > Proximamente funcionará</h1>
+<div class="container style="margin-top:100px";>
+    <div class="row">
+        <form form action="/admin/login" method="post">
+            <div class="mb-5 row">
+                <div class="col-sm-10">
+                    <input type="text" class="form-control"
+                    id="inputUser" placeholder="Usuario"
+                    name="usuairio">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-sm-10">
+                    <input type="password" class="form-control"
+                    id="inputPassword" placeholder="Password"
+                    name="password">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primery" style="background-color:bisque;">Ingresar</button>
+        </form>
+    </div>
+</div>
