--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -1,1 +1,6 @@
-<h1>Hola soy el administrador</h1>
+<div class="container" style="margin-top: 50px;">
+    <div class="row">
+        <p class="text-end">Bienvenido {{persona}} <a class="btn btn-danger" href="/admin/login/logout">Cerrar sesion <i
+            class="fas fa-sign-out-alt"></i></a></p>
+    </div>
+</div>
