--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -1,6 +1,40 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row">
         <p class="text-end">Bienvenido {{persona}} <a class="btn btn-danger" href="/admin/login/logout">Cerrar sesion <i
-            class="fas fa-sign-out-alt"></i></a></p>
+            class="fa fa-sign-out-alt"></i></a></p>
+    </div>
+        <div class="row">
+            <div class="col-7">
+                <h3>Listado de Novedades</h3>
+            </div>
+            <div class="col-5 text-end">
+                <a class="btn btn-success" href=""><i class="fa fa-plus" aria-hidden="true"></i>
+                Nuevo</a>
+            </div>
+        </div>
+    <div class="row">
+        <div class="col">
+            <table class="table">
+                <thead>
+                    <tr class="table-dark">
+                        <th scope="col">#</th>
+                        <th scope="col">Titulo</th>
+                        <th class="text-end">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>titulo</td>
+                        <td class="text-end">
+                            <a class="btn btn-secondary" href="">
+                                <i class="fa fa-pencil" aria-hidden="true"></i></a>
+                            <a class="btn btn-secondary" href="">
+                                <i class="fa fa-trash" aria-hidden="true"></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
