--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -1,17 +1,17 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row">
         <p class="text-end">Bienvenido {{persona}} <a class="btn btn-danger" href="/admin/login/logout">Cerrar sesion <i
-            class="fa fa-sign-out-alt"></i></a></p>
+                    class="fa fa-sign-out-alt"></i></a></p>
     </div>
-        <div class="row">
-            <div class="col-7">
-                <h3>Listado de Novedades</h3>
-            </div>
-            <div class="col-5 text-end">
-                <a class="btn btn-success" href=""><i class="fa fa-plus" aria-hidden="true"></i>
-                Nuevo</a>
-            </div>
+    <div class="row">
+        <div class="col-7">
+            <h3>Listado de Novedades</h3>
         </div>
+        <div class="col-5 text-end">
+            <a class="btn btn-success" href=""><i class="fa fa-plus" aria-hidden="true"></i>
+                Nuevo</a>
+        </div>
+    </div>
     <div class="row">
         <div class="col">
             <table class="table">
@@ -23,6 +23,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {{#each novedades}}
                     <tr>
                         <th scope="row">1</th>
                         <td>titulo</td>
@@ -33,6 +34,7 @@
                                 <i class="fa fa-trash" aria-hidden="true"></i></a>
                         </td>
                     </tr>
+                    {{/each}}
                 </tbody>
             </table>
         </div>
