--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -25,8 +25,8 @@
                 <tbody>
                     {{#each novedades}}
                     <tr>
-                        <th scope="row">1</th>
-                        <td>titulo</td>
+                        <th scope="row">{{id}}</th>
+                        <td>{{titulo}}</td>
                         <td class="text-end">
                             <a class="btn btn-secondary" href="">
                                 <i class="fa fa-pencil" aria-hidden="true"></i></a>
