--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -8,7 +8,7 @@
             <h3>Listado de Novedades</h3>
         </div>
         <div class="col-5 text-end">
-            <a class="btn btn-success" href=""><i class="fa fa-plus" aria-hidden="true"></i>
+            <a class="btn btn-success" href="/admin/novedades/agregar"><i class="fa fa-plus" aria-hidden="true"></i>
                 Nuevo</a>
         </div>
     </div>
