--- a/back/views/admin/agregar.hbs
+++ b/back/views/admin/agregar.hbs
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:100px auto;">
+<div class="container" style="margin-top:100px">
     <div class="row">
         <div class="col-6 offset-3">
             <h4>Agregar una nueva noticia</h4>
