--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -30,7 +30,7 @@
                         <td class="text-end">
                             <a class="btn btn-secondary" href="">
                                 <i class="fa fa-pencil" aria-hidden="true"></i></a>
-                            <a class="btn btn-secondary" href="">
+                            <a class="btn btn-secondary" href="/admin/novedades/eliminar/{{id}}">
                                 <i class="fa fa-trash" aria-hidden="true"></i></a>
                         </td>
                     </tr>
