--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -28,7 +28,7 @@
                         <th scope="row">{{id}}</th>
                         <td>{{titulo}}</td>
                         <td class="text-end">
-                            <a class="btn btn-secondary" href="">
+                            <a class="btn btn-secondary" href="/admin/novedades/modificar/{{id}}">
                                 <i class="fa fa-pencil" aria-hidden="true"></i></a>
                             <a class="btn btn-secondary" href="/admin/novedades/eliminar/{{id}}">
                                 <i class="fa fa-trash" aria-hidden="true"></i></a>
