--- a/back/views/admin/agregar.hbs
+++ b/back/views/admin/agregar.hbs
@@ -12,8 +12,9 @@
             <div class="mb-3 row">
                     <textarea type="text" class="form-control" placeholder="Cuerpo" name="cuerpo"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary" style="background-color:bisque;">Guardar</button> 
+            <button type="submit" class="btn btn-primary" style="background-color:#FFDE59;">Guardar</button>
         </form>
+        <p></p>
         {{#if error}}
         <p>{{message}}</p>
         {{/if}}
