--- a/back/views/admin/modificar.hbs
+++ b/back/views/admin/modificar.hbs
@@ -19,8 +19,8 @@
                 <label for="">Cuerpo</label>
                 <textarea name="cuerpo" class="form-control">{{novedad.cuerpo}}</textarea>
             </div>
-            
-            <button type="submit" class="btn btn-primary">Modificar</button>
+            <br>
+            <button type="submit" class="btn btn-primary" style="background-color:#FFDE59;">Modificar</button>
             </form>
             {{#if error}}
             <p>{{message}}</p>
