--- a/back/views/admin/layout.hbs
+++ b/back/views/admin/layout.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="favicon" href="/front/public/img/Favicon.ico">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
